2017-03-11  Bruno Haible  <bruno@clisp.org>

	Rename LINUX_NOEXEC_HEAPCODES to KERNELVOID32_HEAPCODES.
	* lispbibl.d: Define/expect KERNELVOID32_HEAPCODES and
	KERNELVOID32A_HEAPCODES instead of LINUX_NOEXEC_HEAPCODES.
	* constsym.d (LISPSYM_B): Update.
	* spvw.d (init_memory): Update.
	* spvw_gcmark.d (gc_mark): Update.
	* spvw_memfile.d (loadmem_update): Update.
	* lightning.c: Update.
	* io.d (pr_orecord): Update.
	* built.d (built_flags): Update.
	* Makefile.devel (build-porting*, build-darwin-*): Rename and update
	accordingly.

2017-03-11  Bruno Haible  <bruno@clisp.org>

	Rename STANDARD_HEAPCODES to ONE_FREE_BIT_HEAPCODES.
	* lispbibl.d: Define/expect ONE_FREE_BIT_HEAPCODES instead of
	STANDARD_HEAPCODES.
	* spvw.d (init_memory): Update.
	* spvw_garcol.d (alive): Update.
	* spvw_garcol_old.d (alive): Update.
	* spvw_gcmark.d (gc_mark): Update.
	* lightning.c: Update.
	* built.d (built_flags): Update.
	* makemake.in: Update.
	* Makefile.devel (build-porting*, build-darwin-*): Rename and update
	accordingly.

2017-03-11  Bruno Haible  <bruno@clisp.org>

	maint: Modernize multibuild-linux-x86 target.
	* Makefile.devel (build-linux-x86-*): Remove targets.
	(multibuild-linux-x86): Use the build-porting32-gcc-* targets.
	(multibuild-linux-x86_64): New target.

2017-03-10  Bruno Haible  <bruno@clisp.org>

	Disable address range warning on Mac OS X.
	* spvw_mmap.d: Treat Mac OS X like a platform without 'mincore'.
	Reported by Sam Steingold.

2017-03-10  Sam Steingold  <sds@gnu.org>

	* makemake.in (XCFLAGS) [GCC & !CROSS]: Add -Wno-shift-negative-value.
	Note that gcc accepts -Wno-<whatever>, so no version check is needed.

2017-03-10  Bruno Haible  <bruno@clisp.org>

	Warn before reserving an address range that might crash CLISP.
	* Makefile.devel (GNULIB_CORE): Add vma-iter.
	* spvw_mmap.d: Include vma-iter.h.
	(is_large_range_unmapped_locals): New type.
	(is_large_range_unmapped_callback, is_large_range_unmapped,
	warn_before_reserving_range): New functions.