@@ -2901,11 +2901,17 @@ local inline int init_memory (struct argv_initparams *p) {
  #if defined(SINGLEMAP_MEMORY) || defined(TRIVIALMAP_MEMORY)
   init_map_pagesize();
  #endif
- #if defined(KERNELVOID32_HEAPCODES) && defined(HAVE_MMAP_ANON)
+ #if defined(KERNELVOID32A_HEAPCODES) && defined(HAVE_MMAP_ANON)
   /* On machines on which the address space extends up to 0xFFFFFFFF,
      disable the address range 0xC0000000..0xDFFFFFFF,
      so that we can use it for immediate objects. */
   mmap((void*)0xC0000000,0x20000000,PROT_NONE,MAP_ANON|MAP_PRIVATE|MAP_FIXED,-1,0);
+ #endif
+ #if defined(KERNELVOID32B_HEAPCODES) && defined(HAVE_MMAP_ANON)
+  /* On machines on which the address space extends up to 0xFFFFFFFF,
+     disable the address range 0xE0000000..0xFFFFFFFF,
+     so that we can use it for immediate objects. */
+  mmap((void*)0xE0000000,0x20000000,PROT_NONE,MAP_ANON|MAP_PRIVATE|MAP_FIXED,-1,0);
  #endif
  #if (defined(GENERIC64A_HEAPCODES) || defined(GENERIC64B_HEAPCODES)) && defined(HAVE_MMAP_ANON)
   /* On machines on which the address space extends up to 0xFFFFFFFFFFFFFFFF,
@@ -3097,7 +3103,7 @@ local inline int init_memory (struct argv_initparams *p) {
       var aint end = (start | (bit(garcol_bit_o)-1)) + 1; /* keep garcol_bit zero */
         #endif
         #ifdef KERNELVOID32_HEAPCODES
-      var aint end = 0xBF000000; /* virtual addresses end at 0xC0000000. */
+      var aint end = STACK_ADDRESS_RANGE & 0xFF000000; /* virtual addresses end at 0xC0000000 or 0xE0000000. */
         #endif
         #if defined(GENERIC64A_HEAPCODES) || defined(GENERIC64B_HEAPCODES)
       var aint end = 0xBF000000UL; /* just a wild guess */
